// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditStoreReimbursementForm/> is rendered correctly when the AuditStore is loading 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[MockFunction]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[MockFunction]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Set Reimbursement
        </h4>
      </div>
      <div
        className="modal-body"
      >
        <div
          className="text-center text-muted"
        >
          <img
            alt="loading..."
            src="test-file-stub"
            title="Please Wait"
          />
          <p>
            LOADING
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AuditStoreReimbursementForm/> renders the earnings per audit pre-filled 1`] = `
<div
  className="modal"
  style={
    Object {
      "display": "block",
      "overflow": "scroll",
    }
  }
  tabIndex="-1"
>
  <div
    className="modal-backdrop fade in"
    onClick={[MockFunction]}
    style={
      Object {
        "height": "100%",
        "zIndex": "1060",
      }
    }
  />
  <div
    className="modal-dialog "
    style={
      Object {
        "zIndex": "1070",
      }
    }
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          onClick={[MockFunction]}
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          Set Reimbursement
        </h4>
      </div>
      <div
        className="modal-body"
      >
        <form
          onSubmit={[Function]}
        >
          <ul />
          <p>
            <label>
              Report Date:
            </label>
             
            2nd Sep 2018
          </p>
          <div
            className="form-group"
          >
            <label>
              Reimbursement
            </label>
            <input
              className="form-control"
              label="Reimbursement"
              name="reimbursement"
              onChange={[Function]}
              type="number"
              value={5000}
            />
            <ul />
          </div>
          <button
            className="btn btn-primary"
            type="submit"
          >
            Save Amount
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
